Crosser docker: Update to Debian Bookworm
Signed-off-by: Marko Lindqvist <cazfi74@gmail.com>

--- a/dockers/builders/crosser/Dockerfile-crosser
+++ b/dockers/builders/crosser/Dockerfile-crosser
@@ -1,7 +1,7 @@
 
 # Either latest Debian release, or latest Ubuntu LTS release,
 # which ever is newer.
-FROM ubuntu:jammy
+FROM debian:bookworm
 
 MAINTAINER The Freeciv Project
 
