--- a/buildtest/Makefile.configs
+++ b/buildtest/Makefile.configs
@@ -1,6 +1,7 @@
 
 buildenv=$$(/usr/share/misc/config.guess)
-defconf=""
+defconf="--enable-ack-legacy"
+leg_defconf=""
 clang_leg_conf="CC=clang CXX=clang++ CXXFLAGS=-std=c++11"
 clangconf="CC=clang CXX=clang++"
 
@@ -13,8 +14,14 @@ $(configprefix)gtk3 : dir_gtk3
 $(configprefix)gtk3.22 : dir_gtk3.22
 	( cd $(buildmain)/gtk3.22 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=gtk3.22 --enable-fcmp=gtk3)
 
+$(configprefix)gtk3.22_32 : dir_gtk3.22_32
+	( cd $(buildmain)/gtk3.22_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=gtk3.22 --enable-fcmp=gtk3)
+
 $(configprefix)gtk4 : dir_gtk4
 	( cd $(buildmain)/gtk4 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=gtk4 --enable-fcmp=gtk4)
+
+$(configprefix)gtk4_32 : dir_gtk4_32
+	( cd $(buildmain)/gtk4_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=gtk4 --enable-fcmp=gtk4)
 
 $(configprefix)gtk4x : dir_gtk4x
 	( cd $(buildmain)/gtk4x && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=gtk4x --enable-fcmp=gtk4x)
@@ -22,7 +29,13 @@ $(configprefix)gtk4x : dir_gtk4x
 $(configprefix)sdl2 : dir_sdl2
 	( cd $(buildmain)/sdl2 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=sdl2)
 
+$(configprefix)sdl2_32 : dir_sdl2_32
+	( cd $(buildmain)/sdl2_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=sdl2)
+
 $(configprefix)stub : clientconfig_stub
+
+$(configprefix)stub_32 : dir_stub_32
+	( cd $(buildmain)/stub_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=stub --disable-server )
 
 $(configprefix)qt : dir_qt
 	( cd $(buildmain)/qt && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=qt --enable-fcmp=qt)
@@ -30,8 +43,14 @@ $(configprefix)qt : dir_qt
 $(configprefix)qt5 : dir_qt5
 	( cd $(buildmain)/qt5 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=qt --enable-fcmp=qt --with-qtver=qt5)
 
+$(configprefix)qt5_32 : dir_qt5_32
+	( cd $(buildmain)/qt5_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=qt --enable-fcmp=qt --with-qtver=qt5)
+
 $(configprefix)qt6 : dir_qt6
 	( cd $(buildmain)/qt6 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=qt --enable-fcmp=qt --with-qtver=qt6)
+
+$(configprefix)qt6_32 : dir_qt6_32
+	( cd $(buildmain)/qt6_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-client=qt --enable-fcmp=qt --with-qtver=qt6)
 
 $(configprefix)qt7 : dir_qt7
 	( cd $(buildmain)/qt7 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-client=qt --enable-fcmp=qt --with-qtver=qt6x)
@@ -39,14 +58,26 @@ $(configprefix)qt7 : dir_qt7
 $(configprefix)auth : dir_auth
 	( cd $(buildmain)/auth && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-fcdb=sqlite3,mysql )
 
+$(configprefix)auth_32 : dir_auth_32
+	( cd $(buildmain)/auth_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-fcdb=sqlite3,mysql )
+
 $(configprefix)ndebug : dir_ndebug
 	( cd $(buildmain)/ndebug && $(srcpath)/autogen.sh $(defconf) --disable-debug --enable-gitrev --enable-client=all)
+
+$(configprefix)ndebug_32 : dir_ndebug_32
+	( cd $(buildmain)/ndebug_32 && $(srcpath)/autogen.sh $(leg_defconf) --disable-debug --enable-gitrev --enable-client=all)
 
 $(configprefix)c23 : dir_c23
 	( cd $(buildmain)/c23 && $(srcpath)/autogen.sh $(defconf) CFLAGS="-std=c2x" CXXFLAGS="-std=c++23" --disable-debug --enable-gitrev --enable-client=all)
 
+$(configprefix)c23_32 : dir_c23_32
+	( cd $(buildmain)/c23_32 && $(srcpath)/autogen.sh $(leg_defconf) CFLAGS="-std=c2x" CXXFLAGS="-std=c++23" --disable-debug --enable-gitrev --enable-client=all)
+
 $(configprefix)nonls : dir_nonls
 	( cd $(buildmain)/nonls && $(srcpath)/autogen.sh $(defconf) --enable-debug --disable-nls)
+
+$(configprefix)nonls_32 : dir_nonls_32
+	( cd $(buildmain)/nonls_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --disable-nls)
 
 $(configprefix)web : dir_web
 	( cd $(buildmain)/web && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-fcweb --enable-json --enable-client)
@@ -54,14 +85,20 @@ $(configprefix)web : dir_web
 $(configprefix)shared : dir_shared
 	( cd $(buildmain)/shared && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-shared --disable-static --enable-client=sdl2,qt,gtk3.22)
 
-$(configprefix)shared31 : dir_shared31
-	( cd $(buildmain)/shared31 && $(srcpath)/autogen.sh $(defconf) --enable-debug --enable-shared --disable-static --enable-client=gtk3,sdl2,qt,gtk3.22)
+$(configprefix)shared_32 : dir_shared_32
+	( cd $(buildmain)/shared_32 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-shared --disable-static --enable-client=sdl2,qt,gtk3.22)
 
-$(configprefix)clang31: dir_clang31
-	( cd $(buildmain)/clang31 && $(srcpath)/autogen.sh $(clangconf) $(defconf) --enable-debug --enable-client=gtk3,sdl2,qt,gtk3.22 --enable-fcmp=gtk3,qt,cli)
+$(configprefix)shared31 : dir_shared31
+	( cd $(buildmain)/shared31 && $(srcpath)/autogen.sh $(leg_defconf) --enable-debug --enable-shared --disable-static --enable-client=gtk3,sdl2,qt,gtk3.22)
 
 $(configprefix)clang: dir_clang
 	( cd $(buildmain)/clang && $(srcpath)/autogen.sh $(clangconf) $(defconf) --enable-debug --enable-client=sdl2,qt,gtk3.22 --enable-fcmp=gtk3,qt,cli)
+
+$(configprefix)clang_32: dir_clang_32
+	( cd $(buildmain)/clang_32 && $(srcpath)/autogen.sh $(clangconf) $(leg_defconf) --enable-debug --enable-client=sdl2,qt,gtk3.22 --enable-fcmp=gtk3,qt,cli)
+
+$(configprefix)clang31: dir_clang31
+	( cd $(buildmain)/clang31 && $(srcpath)/autogen.sh $(clangconf) $(leg_defconf) --enable-debug --enable-client=gtk3,sdl2,qt,gtk3.22 --enable-fcmp=gtk3,qt,cli)
 
 $(mesonprefix)mall31: dir_mall31
 	( cd $(buildmain)/mall31 && meson $(srcpath) -Dack_experimental=true -Ddebug=true -Dclients=gtk4,sdl2,qt,gtk3.22 -Dfcmp=cli,gtk3,qt,gtk4 $$MEXTRA_CONFIG)
