--- a/buildtest/Makefile.configs
+++ b/buildtest/Makefile.configs
@@ -123,6 +123,9 @@ $(mesonprefix)mqt7: dir_mqt7
 $(mesonprefix)sdl3: dir_sdl3
 	( cd $(buildmain)/sdl3 && meson $(srcpath) $(mesonconf) -Ddebug=true -Dclients=sdl3 -Daudio=sdl3 $$MEXTRA_CONFIG)
 
+$(mesonprefix)sdl3q: dir_sdl3q
+	( cd $(buildmain)/sdl3q && meson $(srcpath) $(mesonconf) -Ddebug=true -Dclients=sdl3 -Daudio=none $$MEXTRA_CONFIG)
+
 $(mesonprefix)mO3: dir_mO3
 	( cd $(buildmain)/mO3 && meson $(srcpath) -Doptimization=3 -Ddebug=true -Dclients=gtk3.22,sdl2,qt -Dfcmp=cli,gtk3,qt,gtk4 $$MEXTRA_CONFIG)
 
