--- a/buildtest/Makefile.template
+++ b/buildtest/Makefile.template
@@ -24,9 +24,9 @@ srcpath = ../../src
 builds = gtk3 sdl2 gtk3.22 gtk4 gtk4x qt5 qt6 qt7 stub auth ndebug nonls c23 shared clang web
 mesonbuilds = mall mqt5 mO3 mqt7 mclang mweb sdl3 fcdb
 
-# For freeciv-3.2 and earlier:
-#builds = gtk3 sdl2_32 gtk3.22_32 gtk4_32 qt5_32 qt6_32 stub_32 auth_32 ndebug_32 nonls_32 c23_32 shared_32 clang_32 web
-#mesonbuilds = mall32 mqt5 mO3 mclang32 mweb sdl3
+# For freeciv-3.2:
+#builds = sdl2_32 gtk3.22_32 gtk4_32 qt5_32 qt6_32 stub_32 auth_32 ndebug_32 nonls_32 c23_32 shared_32 clang_32 web
+#mesonbuilds = mall_33 mqt5 mO3 mclang_33 mweb sdl3
 
 # Paths from the build root directory (directory of this Makefile) to makefile fragments
 # within freeciv-environments.
